<resources>
    <string name="app_name">MoneyLine</string>
    <string name="NoImage">Imgage</string>
    <string name="Account">tài khoản</string>
    <string name="Cancel">thoát</string>
    <string name="SavingAccountTab">sổ tiết kiệm</string>
    <string name="MucChi">Mục chi</string>
    <string name="ChuThich">Chú thích</string>
    <string name="TaiKhoan">Tài khoản</string>
    <string name="Ngay">Ngày</string>
    <string name="ChoAi">Chi cho ai</string>
    <string name="EventTitle">số tiền</string>
    <string name="Delete">xóa</string>
    <string name="Lender">lender</string>
    <string name="Event">SoTien</string>
    <string name="Save">lưu lại</string>
    <string name="EditPayeeDialogHead">sửa mục chi</string>

        <string name="title_activity_control_thu_chi">ControlThuChiActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_tai_khoan_">TaiKhoan_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Register">register</string>
    <string name="HasAccount">HasAccount</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="presentlanguage">present language</string>
    <string name="Use_passcode">Pass code</string>
    <string name="PassCode"> pass</string>
    <string name="ChangePassCode">chang pass</string>
    <string name="Setting">Settings</string>
    <string name="Logout">Logout</string>
    <string name="LinkAccount">Link account</string>
    <string name="SettingGroupUse">setting user</string>
    <string name="ProductInfomation">Đăng xuất</string>
    <string name="help">help</string>
    <string name="Invite">invite</string>
    <string name="SendFeedBack">sen feeback</string>
    <string name="RateApp">rate app</string>
    <string name="notification">notification</string>
    <string name="SettingMore">setting more</string>
    <string name="ReminderInput">reminder input</string>
    <string name="Language">language</string>
    <string name="SettingGroupSetup">settinggroup setup</string>
    <string name="CurrencyRate">currency rate</string>
    <string name="Currency">Currency</string>
    <string name="SettingGroupCurrency">setting group currency</string>
    <string name="ExportData">Export data</string>
    <string name="SyncData">Sync Data</string>
    <string name="Syncs"> Sync</string>

    <string name="Income_Expenses">income expenses</string>
    <string name="SettingGroupData">setting group data</string>
    <string name="Recurring">Recurring</string>
    <string name="ShoppingList">Shopping List</string>
    <string name="SettingGroupTool">setting group tool</string>
    <string name="ItemGroup">item group</string>
    <string name="NeedToBuy">need to buy</string>
    <string name="Description">Diễn giải</string>
    <string name="ItemNameHint">item name hint</string>
    <string name="Name">Tên</string>
    <string name="Expenses">expenses</string>
    <string name="WriteTransaction">WriteTransaction</string>
    <string name="Ghi">Ghi</string>
    <string name="NewPassWord">new password</string>
    <string name="ConfirmPassWord">con firm password</string>
    <string name="OldPassWord">oldpassword</string>
    <string name="ChangePassWord">change password</string>
    <string name="SettingChangeUserName">Setting Change UserName</string>
    <string name="SettingChangeUserNameConfirmPassWord">confirm password</string>
    <string name="SettingNewUserNameHint">New UserName</string>
    <string name="SettingNewUserName">New UserName</string>
    <string name="ResetDataConfirm">Reset data confirm</string>
    <string name="ResetDataConfirmPasswordNote">Password note</string>
    <string name="AtTime">At Time</string>
    <string name="ReminderInputMessage">ReMinder Input Message</string>
    <string name="Agree">Agree</string>
    <string name="Time">Time</string>
    <string name="Date">Ngày</string>
    <string name="CurrenceTime">Currence time</string>
    <string name="Today">Today</string>
    <string name="ResetData">Reset data</string>
    <string name="SettingGetAllServerData">get all server data</string>
    <string name="ContentDescriptionImageNull">image null</string>
    <string name="SettingMoreTitle">Setting more</string>
    <string name="Sync" />
    <string name="settingMenuSendError">sent error</string>
    <string name="Key0">0</string>
    <string name="Key9">9</string>
    <string name="Key8">8</string>
    <string name="Key7">7</string>
    <string name="Key6">6</string>
    <string name="Key5">5</string>
    <string name="Key4">4</string>
    <string name="Key3">3</string>
    <string name="Key2">2</string>
    <string name="Key1">1</string>
    <string name="or">or</string>
    <string name="ForgotPassword">forgot password</string>
    <string name="Login">login</string>
    <string name="InputNewPassCode">input new passcode</string>
    <string name="SavingFromAccount">saving from account</string>
    <string name="SavingToAccount">saving to account</string>
    <string name="SavingManurity">saving manurity</string>
    <string name="SavingInterestRate">saving Interse rate</string>
    <string name="percent">percent</string>
    <string name="SavingTermType">saving termtype</string>
    <string name="SavingEndDateSubmitted">End date submitted</string>
    <string name="SavingDateSubmitted">Date Submitted</string>
    <string name="Approximate">Approximate</string>
    <string name="CreditAccountHint">Credit Account</string>
    <string name="FirstAmount">First Amount</string>
    <string name="SavingBank">Bank</string>
    <string name="CurencyType">CurencyType</string>
    <string name="AccountCategory">Account Category</string>
    <string name="Note">Note</string>
    <string name="SavingInterestPayment">Interest Payment</string>
    <string name="LastSyncData">Last Sync data</string>
    <string name="WifiOnly">wifi only</string>
    <string name="SaveAndNew">Thêm mới</string>
    <string name="ExpenseFromBorrowTitel">Expense From borrowtitel</string>
    <string name="ExpenseForOrther">Chi cho ai</string>
    <string name="AccountFrom">Vào tài khoản</string>
    <string name="ExpenseFor">Chi cho</string>

        <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="Done">Done</string>
    <string name="frmIncomeDetail_Add">Thêm danh mục</string>
    <string name="CatagoryExpensesName">Tên chi phí</string>
    <string name="frmCatagoryExpensesHeader">Catagory Expenses</string>
    <string name="CatagoryExpensesParent">Catagory Expenses</string>
    <string name="Months">Months</string>
    <string name="SavingTermTypeOther">Type other</string>
    <string name="SavingTermTypeThreeWeek">Three Week</string>
    <string name="SavingTermTypeTwoWeek">Two week</string>
    <string name="SavingTermTypeOneWeek">One week</string>
    <string name="SavingTermTypeTwelveMonth">Twele Month</string>
    <string name="SavingTermTypeSixMonth">Six month</string>
    <string name="SavingTermTypeThreeMonth">Three month</string>
    <string name="SavingTermTypeOneMonth">One month</string>
    <string name="FromDate">From Date</string>
    <string name="SelectTrendReportTime">Trend report time</string>
    <string name="ToDate">To date</string>
    <string name="PercentExpense">Precent expense</string>
    <string name="TrendIncomeTotal">in come total</string>
    <string name="AveragrValue">Averagr value</string>
    <string name="SumExpense">Sum expense</string>
    <string name="EmptyReport">Empty report</string>
    <string name="TrendReportTime">Report time</string>
    <string name="ChoseAccount">Chose acount</string>
    <string name="TrendReportExpenseCategory">Report expense category</string>
    <string name="EditMoney">Edit money</string>
    <string name="CategoryList">Category</string>
    <string name="SaveLanguage">Reset Now</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="TickTK">Account</string>
    <string name="tab_date">Date</string>
    <string name="tab_time">Time</string>
    <string name="SelectNote">danh sách thu chi</string>
    <string name="Chi">Chi</string>
    <string name="Thu">Thu</string>
    <string name="ChoVay">Cho vay</string>
    <string name="ToAccount">Vào tài khoản</string>
    <string name="MucThu">Mục thu</string>
    <string name="Money">Số tiền</string>
    <string name="NguoiVay">Người vay</string>
    <string name="CaNhan">Personal</string>
    <string name="SoTien">Số tiền</string>
    <string name="ThuTu">Thu Từ</string>
    <string name="CategoryM">Category</string>
    <string name="GhiChu">Ghi chú</string>
    <string name="Type">Loại Tài Khoản</string>
    <string name="AccountName">Tên Tài Khoản</string>
    <string name="SoTienBanDau">Số tiền ban đầu</string>
    <string name="ThemTaiKhoan">Thêm tài khoản</string>
    <string name="TaiKhoanLoai">Loại tài khoản</string>
    <string name="TienMat">Tiền mặt</string>
    <string name="TheATM">Thẻ ATM</string>
    <string name="TaiKhoanNganHang">Tài Khoản Ngân Hàng</string>
    <string name="SoTietKiem">Sổ Tiết Kiệm</string>
    <string name="TaiKhoanKhac">Khác</string>
    <string name="KyHan">Kỳ Hạn</string>
    <string name="NgayGui">Ngày gửi</string>
    <string name="LaiSuat">Lãi suất</string>
    <string name="SoTienGui">Số tiền gửi</string>
    <string name="Thang24">24 Tháng</string>
    <string name="HomNay">Hôm nay</string>
    <string name="Vay">Vay</string>

    <string name="PhanTram">%</string>
    <string name="DiaChiEmailKhongHopLe">Email không hợp lệ</string>
    <string name="KhongCoMang">không có mạng.</string>
    <string name="NhapMa">Nhập mã</string>
    <string name="NamNay">năm này</string>
    <string name="ThangNay">tháng này</string>
    <string name="TuanNay">tuần này</string>
    <string name="TatCa">tất</string>
    <string name="ThuChi">Tất cả</string>
    <string name="TextThu">Thu</string>
    <string name="chuanhaptaikhoan">Bạn chưa nhập tên tài khoản.</string>
    <string name="chuanhapsotienbandau">Bạn chưa nhập số tiền ban đầu</string>
    <string name="Sua">Sửa</string>
</resources>
