<?xml version="1.0"
    encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/BackgroudForm"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout android:gravity="center"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/lnHead"
            android:background="@color/background_Regis_Login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <TextView android:gravity="center"
                android:id="@+id/btnCancel"
                android:background="@drawable/selector_button_back"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:layout_width="wrap_content"
                android:layout_height="50.0dip"
                android:text="@string/Cancel"
                style="@style/TextHeaderAction"
                />
            <TextView android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:id="@+id/txtCatagoryExpenses"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/frmCatagoryExpensesHeader"
                android:layout_weight="1.0"
                style="@style/TextHeader"
                />
            <TextView android:gravity="center"
                android:id="@+id/btnSave"
                android:background="@drawable/selector_button_save_gray"
                android:layout_width="50.0dip"
                android:layout_height="30.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/Save"
                style="@style/TextHeaderAction"
                />
        </LinearLayout>
    </ScrollView>
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical"
            android:background="@color/BackgroudForm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical"
                android:background="@drawable/customeditmoney"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_marginRight="10.0dip">
                <LinearLayout android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/Name"
                        style="@style/FormEditTitle"
                        />
                    <EditText android:gravity="center|right"
                        android:id="@+id/txtCategoryName"
                        android:background="@color/white"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginTop="5.0dip"
                        android:layout_marginRight="5.0dip"
                        android:layout_marginBottom="5.0dip"
                        android:minHeight="44.0dip"
                        android:hint="@string/CatagoryExpensesName"
                        android:layout_weight="1.0"
                        android:inputType="textCapSentences"
                        style="@style/FormEditValue">
                        <requestFocus />
                    </EditText>
                    <ImageView android:id="@+id/imgDeleteEvent"
                        android:background="@drawable/clearedit"
                        android:visibility="gone"
                        android:layout_width="26.0dip"
                        android:layout_height="26.0dip"
                        android:layout_marginRight="5.0dip"
                        android:contentDescription="@string/NoImage"
                        />
                </LinearLayout>
                <View android:id="@+id/expenseCategoryLine"
                    android:background="@color/Line"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    />
                <LinearLayout android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:id="@+id/lnCatagoryExpensesParent"
                    android:background="@drawable/selector_listview_one"
                    android:clickable="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2.0dip"
                    android:layout_marginRight="2.0dip"
                    android:layout_marginBottom="1.0dip">
                    <TextView android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/CatagoryExpensesParent"
                        style="@style/FormEditTitle"
                        />
                    <TextView android:gravity="center|right"
                        android:id="@+id/txtCatagoryExpensesParent"
                        android:clickable="false"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginTop="5.0dip"
                        android:layout_marginBottom="5.0dip"
                        android:minHeight="44.0dip"
                        android:layout_weight="1.0"
                        style="@style/FormEditValue"
                        />
                    <ImageView android:layout_gravity="center_vertical"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5.0dip"
                        android:src="@drawable/disclosure"
                        android:contentDescription="@string/NoImage"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/customeditmoney"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_marginRight="10.0dip"
                android:minHeight="50.0dip">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/Description"
                    style="@style/TextViewStyleBlack"
                    />
                <EditText android:gravity="center|right"
                    android:id="@+id/txtDescription"
                    android:background="@color/white"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginBottom="5.0dip"
                    android:minHeight="44.0dip"
                    android:layout_weight="1.0"
                    android:inputType="textCapSentences|textMultiLine"
                    style="@style/FormEditValue"
                    />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">
                <LinearLayout android:gravity="center"
                    android:id="@+id/btnSaveBottom"
                    android:background="@drawable/selector_button_green"
                    android:layout_width="0.0dip"
                    android:layout_height="40.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="30.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="20.0dip"
                    android:layout_weight="1.0">
                    <ImageView android:layout_width="25.0dip"
                        android:layout_height="20.0dip"
                        android:src="@drawable/save_icon_button"
                        android:contentDescription="@string/NoImage"
                        />
                    <TextView android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Save"
                        style="@style/TextViewStyle"
                        />
                </LinearLayout>
                <LinearLayout android:gravity="center"
                    android:id="@+id/btnDelete"
                    android:background="@drawable/selector_button_red"
                    android:visibility="gone"
                    android:layout_width="0.0dip"
                    android:layout_height="40.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="30.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="20.0dip"
                    android:layout_weight="1.0">
                    <ImageView android:layout_width="25.0dip"
                        android:layout_height="20.0dip"
                        android:src="@drawable/back_trash"
                        android:contentDescription="@string/NoImage"
                        />
                    <TextView android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Delete"
                        style="@style/TextViewStyle"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>